# RustCloud-implementation

./: .gitignore  Cargo.toml  README.md
examples/: bigquery_list_datasets.rs  bigquery_run_query.rs
src/: error.rs  lib.rs
src/ai/: mod.rs  traits.rs  types.rs
src/ai/azure_openai/: error.rs  mod.rs  types.rs
src/ai/bedrock/: error.rs  mod.rs  types.rs
src/ai/vertex/: error.rs  mod.rs  types.rs
src/analytics/: mod.rs  traits.rs
src/analytics/bigquery/: error.rs  mod.rs  types.rs
src/auth/: aws.rs  azure.rs  gcp.rs  mod.rs
tests/: bigquery_mock.rs
